--- a/src/assets/CSS/Product.css
+++ b/src/assets/CSS/Product.css
@@ -429,7 +429,7 @@ input[type="number"] {
 }
 
 .seprator2 {
-    background-color: #6f6868;
+    background-color:#6f68684f;
     width: 100%;
     height: .5px;
     margin-top: 1rem;
