--- a/src/index.css
+++ b/src/index.css
@@ -183,13 +183,14 @@ footer-payment-icon ul li {
   gap: 3.2rem;
   text-transform: capitalize;
   align-items: center;
+  justify-content: center;
 }
 
 .navbar ul li a {
   color: var(--heading-color);
   font-weight: 600;
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 0.9rem;
   display: inline-block;
   position: relative;
   color: black;
@@ -229,7 +230,7 @@ footer-payment-icon ul li {
   gap: 16px;
   grid-template-columns: repeat(2, 1fr);
   padding: 15px;
-  width: 10rem;
+  /* width: 10rem; */
 }
 
 /* 1 column on very small screens */
@@ -506,12 +507,16 @@ footer-payment-icon ul li {
   padding: 5px 11px;
 }
 
+.offcanvas {
+  max-width: 100% !important;
+}
+
 .offcanvas.offcanvas-end {
-  right: 9px !important;
+  right: 4px !important;
 }
 
 .offcanvas.offcanvas-start {
-  left: 9px !important;
+  left: 4px !important;
 }
 
 .checkbtn:hover {
@@ -771,13 +776,14 @@ table {
 }
 
 .MyAccLi {
- 
+
   font-size: 18px;
   padding: 14px 0px;
   border-radius: 10px;
   text-align: start;
-  
+
 }
+
 .MyAccLi {
   color: #000;
 }
@@ -785,6 +791,136 @@ table {
 .MyAccLi.active {
 
   background-color: #80808024;
-  color: #007bff; /* Bootstrap primary color */
+  color: #007bff;
+  /* Bootstrap primary color */
 
 }
+
+.highlight {
+  background-color: yellow;
+  /* Highlight color */
+  font-weight: bold;
+  /* Optional: Make it bold */
+}
+
+.navbar {
+  height: 60px;
+}
+
+.navbar-toggler {
+  border: none;
+}
+
+.nav-icon {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-icon .badge {
+  font-size: 0.75rem;
+  font-weight: 600;
+  padding: 0.2rem 0.4rem;
+}
+
+.navbar img {
+  max-height: 40px;
+  margin-right: 0px;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    justify-content: space-between;
+  }
+
+  .navbar-brand {
+    width: auto;
+  }
+
+  .nav-icon {
+    margin-left: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .custom-navbar-tools {
+    display: none !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .custom-navbar-tools2 {
+    display: none !important;
+  }
+}
+
+.OffNav {
+  font-size: 17px !important;
+}
+
+.navlist li {
+  list-style: disc;
+  font-size: 14px;
+}
+
+.navbar-nav li a {
+  justify-content: start;
+  display: flex
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+@media (max-width: 768px) {
+  .card-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 20px;
+  }
+}
+
+.card-container {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  width: 100%;
+  max-width: 300px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #fff;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  transition: transform 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+}
+
+.card img {
+  width: 100%;
+  object-fit: contain;
+}
+
+.card-body {
+  padding: 15px;
+  text-align: center;
+}
+
+.sale-badge {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  background-color: red;
+  color: #fff;
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+
