--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,9 @@ li {
   list-style-type: none;
 
 }
-.react-multi-carousel-track  li{
-  flex: 1 0 auto!important;
+
+.react-multi-carousel-track li {
+  flex: 1 0 auto !important;
 }
 
 
@@ -254,6 +255,7 @@ footer-payment-icon ul li {
     width: 100%;
     /* 3 columns on medium screens */
   }
+
 }
 
 @media (min-width: 992px) {
@@ -778,6 +780,10 @@ table {
     font-size: 1rem;
     margin-left: 10px;
   }
+
+  .imghide {
+    display: none;
+  }
 }
 
 .MyAccLi {
@@ -879,6 +885,7 @@ table {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 20px;
 }
+
 @media (max-width: 768px) {
   .card-grid {
     display: grid;
@@ -913,7 +920,7 @@ table {
 }
 
 .card-body {
-  padding: 0px!important;
+  padding: 0px !important;
   text-align: center;
 }
 
@@ -930,6 +937,5 @@ table {
 
 
 .carousel-indicators {
-  bottom: -41px!important;
+  bottom: -41px !important;
 }
-
