--- a/src/index.css
+++ b/src/index.css
@@ -249,11 +249,27 @@ footer-payment-icon ul li {
   }
 }
 
+
+
 @media (min-width: 768px) {
   .card-grid {
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     /* 3 columns on medium screens */
+  }
+
+}
+
+.order-actions p {
+  font-weight: 600;
+  text-align: start;
+}
+
+@media (max-width: 576px) {
+  .order-actions {
+    display: block;
+    text-align: start;
+    margin: 0px 0px;
   }
 
 }
@@ -653,9 +669,12 @@ h1 {
   font-size: 14px;
   font-weight: 600;
 }
+
 .table-wrapper {
-  overflow: hidden; /* Ensures the border-radius is visible */
-  border-radius: 8px; /* Desired border radius */
+  overflow: hidden;
+  /* Ensures the border-radius is visible */
+  border-radius: 8px;
+  /* Desired border radius */
 }
 
 #keywords thead tr th.headerSortUp,
@@ -680,9 +699,10 @@ h1 {
   text-align: center;
   padding: 5px 10px;
   font-size: 14px;
-  text-align: center!important;
+  text-align: center !important;
 }
-thead{
+
+thead {
   border-radius: 15px;
 }
 
@@ -721,6 +741,13 @@ thead{
     max-width: 885px !important;
     margin: 43px auto !important;
   }
+}
+
+@media (max-width: 768px) {
+  .ship-to-container {
+    display: none;
+  }
+
 }
 
 .modal-content {
@@ -778,17 +805,20 @@ table {
 .navbar-tools .nav-link:hover {
   color: #007bff;
 }
+
 .form-container {
-  max-width: 70%!important;
+  max-width: 70% !important;
 }
+
 /* Responsive Styles */
 @media (max-width: 768px) {
   .navbar-tools .nav-link {
     font-size: 1rem;
     margin-left: 10px;
   }
+
   .form-container {
-    max-width: 90%!important;
+    max-width: 90% !important;
   }
 
   .imghide {
@@ -857,7 +887,7 @@ table {
 }
 
 .navbar img {
-  max-height: 80px;
+  max-height: 70px;
   margin-right: 0px;
 }
 
@@ -977,68 +1007,23 @@ table {
   bottom: -41px !important;
 }
 
-/* .offcanvas-start {
-  transition: none;
-  animation: slideFromLeft 0.5s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
-}
-
-.offcanvas-end {
-  transition: none;
-  animation: slideFromRight 0.5s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
-}
-
-@keyframes slideFromLeft {
-  from {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
-
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideFromRight {
-  from {
-    transform: translateX(100%);
-    opacity: 0;
-  }
-
-  to {
-    transform: translateX(0);
-    opacity: 1;
-  }
-}
-
 .offcanvas-backdrop {
-  transition: none;
-  animation: fadeInBackdrop 0.5s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+  background-color: #00000070 !important;
 }
 
-.offcanvas-backdrop.fade.show {
-  animation: fadeInBackdrop 0.5s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
-}
-
-@keyframes fadeInBackdrop {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-} */
-.offcanvas-backdrop {
-  background-color: #00000070!important;
-}
 .customoffcanvas {
-  height: 100vh; /* Fallback for unsupported browsers */
-  height: var(--viewport-height, 100vh); /* Dynamic height */
-  width: 100vw; /* Fallback for unsupported browsers */
-  width: var(--viewport-width, 100vw); /* Dynamic width */
+  height: 100vh;
+  /* Fallback for unsupported browsers */
+  height: var(--viewport-height, 100vh);
+  /* Dynamic height */
+  width: 100vw;
+  /* Fallback for unsupported browsers */
+  width: var(--viewport-width, 100vw);
+  /* Dynamic width */
 }
+
 .form-control {
-  padding: 0.375rem 0.75rem!important;
+  padding: 0.375rem 0.75rem !important;
 }
 
 .order-card {
@@ -1050,7 +1035,8 @@ table {
   font-family: Arial, sans-serif;
   background-color: #fff;
 }
-.order-info{
+
+.order-info {
   display: flex;
 }
 
@@ -1071,8 +1057,8 @@ table {
 }
 
 .order-info strong {
-  font-size: 13px;
-  color: #555;
+  font-size: 14px;
+  color: #000000;
 }
 
 .ship-to {
@@ -1116,6 +1102,7 @@ table {
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 2px;
+  text-align: start;
 }
 
 .return-window {
@@ -1140,8 +1127,9 @@ table {
 }
 
 .buy-again-btn {
-  background-color: #ffd814;
   color: #111;
+  border: 1px solid #00000042;
+  border-radius: 18px !important;
 }
 
 .view-item-btn {
@@ -1218,11 +1206,53 @@ table {
   opacity: 1 !important;
   border-color: transparent transparent #ffffff transparent;
 }
-.ship-to-container:hover .tooltip{
+
+.ship-to-container:hover .tooltip {
   opacity: 1;
   width: 181%;
 }
-.ship-to-container{
-cursor: pointer;
-position: relative;
+
+.ship-to-container {
+  cursor: pointer;
+  position: relative;
+}
+
+.Orderdetailsheader {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 576px) {
+
+
+  .Orderdetailsheader p {
+    text-align: start;
+  }
+
+  .order-header {
+    display: block !important;
+
+  }
+
+  .buy-again-btn,
+  .view-item-btn {
+    padding: 4px 10px !important;
+    font-size: 12px !important;
+  }
+
+  .link_404 {
+    padding: 6px 12px !important;
+  }
+
+  .order-header .ordermid {
+    margin-bottom: 23px;
+  }
+}
+
+@media (max-width: 400px) {
+
+
+  .Orderdetailsheader {
+    display: block !important
+  }
 }
